src/tests/negative-suites/scratch.tmp

#############################################################################
# can't reference class within non-expanded template
template Temp(T) {
    class S { }
}
a:S
?SymbolNotDefined, 7, 3

#############################################################################
# can't reference function within non-expanded template
template Temp(T) {
    func foo:void() 1
}
foo()
?SymbolNotDefined, 7, 1

#############################################################################
# can't reference variable within non-expanded template
template Temp(T) {
    f:int = 1
}
f
?SymbolNotDefined, 7, 1

